--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "google-api-python-client",
     "google-auth-oauthlib",
     "pyyaml (>=6.0.2,<7.0.0)",
+    "python-dateutil (>=2.9.0.post0,<3.0.0)",
 ]
 
 
